tests/reference/asr-internal_proc_ptr_host_assoc_01-ef54f0c.stderr
semantic error: Internal procedures cannot be assigned to procedure pointers yet
  --> tests/errors/internal_proc_ptr_host_assoc_01.f90:18:9
   |
18 |         ptr => local
   |         ^^^^^^^^^^^^ 
